# LamaVM

./: .gitignore  CMakeLists.txt  README.md
runtime/: Makefile  gc_runtime.s  runtime.c
src/: ByteFile.hpp  globals.hpp  main.cpp  runtime.hpp
src/analyzer/: AnalysisState.hpp  AnalyzeSingle.hpp  InstructionName.hpp  analyzer.hpp
src/decoders/: CommandStructureType.hpp  InstructionsDecoder.hpp  SingleInstructionDecoders.hpp
src/executors/: BinopExecutor.hpp  Boxing.hpp  BuiltinCallsExecutors.hpp  CallsExecutors.hpp  Executors.hpp  JumpExecutors.hpp  MatchingExecutors.hpp  MemoryExecutors.hpp  StackOpsExecutors.hpp
src/state/: FrameStack.hpp  InterpreterState.hpp
